--- a/taskapp/app/views/tasks/index.html.erb
+++ b/taskapp/app/views/tasks/index.html.erb
@@ -15,7 +15,35 @@
   </thead>
 
   <tbody>
-    <% @tasks.each do |task| %>
+    <% @tasks.pending each do |task| %>
+      <tr>
+        <td><%= task.description %></td>
+        <td><%= task.priority %></td>
+        <td><%= task.due_date %></td>
+        <td><%= task.is_completed %></td>
+        <td><%= task.task_list %></td>
+        <td><%= link_to 'Show', task %></td>
+        <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <th>Description</th>
+      <th>Priority</th>
+      <th>Due date</th>
+      <th>Is completed</th>
+      <th>Task list</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tasks.completed.first(5) each do |task| %>
       <tr>
         <td><%= task.description %></td>
         <td><%= task.priority %></td>
