--- a/taskapp/app/views/tasks/_form.html.erb
+++ b/taskapp/app/views/tasks/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
@@ -29,11 +34,6 @@
   <div class="field">
     <%= f.label :is_completed %>
     <%= f.check_box :is_completed %>
-  </div>
-
-  <div class="field">
-    <%= f.label :is_private %>
-    <%= f.check_box :is_private %>
   </div>
 
   <div class="field">
