--- a/taskapp/app/views/tasks/index.html.erb
+++ b/taskapp/app/views/tasks/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<h1>Pending Tasks</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
+      <th>Title</th>
       <th>Priority</th>
       <th>Due date</th>
       <th>Is completed</th>
@@ -15,13 +15,13 @@
   </thead>
 
   <tbody>
-    <% @tasks.pending each do |task| %>
+    <% @tasks.pending.each do |task| %>
       <tr>
-        <td><%= task.description %></td>
+        <td><%= task.title %></td>
         <td><%= task.priority %></td>
         <td><%= task.due_date %></td>
         <td><%= task.is_completed %></td>
-        <td><%= task.task_list %></td>
+        <td><%= task.task_list.name %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,10 +30,12 @@
   </tbody>
 </table>
 
+<h1>Last 5 Completed Tasks</h1>
+
 <table>
   <thead>
     <tr>
-      <th>Description</th>
+      <th>Title</th>
       <th>Priority</th>
       <th>Due date</th>
       <th>Is completed</th>
@@ -43,13 +45,13 @@
   </thead>
 
   <tbody>
-    <% @tasks.completed.first(5) each do |task| %>
+    <% @tasks.completed.first(5).each do |task| %>
       <tr>
-        <td><%= task.description %></td>
+        <td><%= task.title %></td>
         <td><%= task.priority %></td>
         <td><%= task.due_date %></td>
         <td><%= task.is_completed %></td>
-        <td><%= task.task_list %></td>
+        <td><%= task.task_list.name %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
