--- a/taskapp/app/views/task_lists/_form.html.erb
+++ b/taskapp/app/views/task_lists/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= f.label :is_private %>
+    <%= f.check_box :is_private %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
