--- a/taskapp/app/views/layouts/_sidebar.html.erb
+++ b/taskapp/app/views/layouts/_sidebar.html.erb
@@ -2,5 +2,6 @@
   <ul>
     <li> <%= link_to "Tasks", tasks_path %> </li>
     <li> <%= link_to "Task Lists", task_lists_path %> </li>
+    <li> <%= link_to "Home", home_path %> </li>
   </ul>
 </div>
