--- a/taskapp/app/views/tasks/_form.html.erb
+++ b/taskapp/app/views/tasks/_form.html.erb
@@ -41,6 +41,11 @@
     <%= f.collection_select :task_list_id, TaskList.all, :id, :name, prompt: "Please select a list.." %>
   </div>
 
+  <div class="field">
+    <%= f.label :user_id %>
+    <%= f.collection_select :user_id, User.all, :id, :username, prompt: "No users assigned" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
