--- a/taskapp/app/views/layouts/application.html.erb
+++ b/taskapp/app/views/layouts/application.html.erb
@@ -15,7 +15,19 @@
     <%= render "layouts/sidebar" %>
     <div class="main">
       <%= yield %>
+      <% if session[:user_id] %>
+        <%= link_to 'Logout', logout_path %>
+      <% else %>
+        <%= link_to 'Login', login_path %>
+      <% end %>
     </div>
+    <div class="primary">
+      <% if flash[:message] %>
+        <p class="flash-message">
+        <%= flash[:message] %></p>
+      <% end %>
+
+      </div>
     <footer>
       <p>This is my footer.</p>
     </footer>
